--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,8 +17,8 @@
           </a>
 
           <div class="dropdown-menu dropdown-menu-right">
-            <%= link_to '掲示板一覧', "#", class: "dropdown-item" %>
-            <%= link_to '掲示板作成', "#", class: "dropdown-item" %>
+            <%= link_to '掲示板一覧', boards_path, class: "dropdown-item" %>
+            <%= link_to '掲示板作成', new_board_path, class: "dropdown-item" %>
           </div>
         </li>
 
@@ -31,7 +31,7 @@
             <%= image_tag "sample.jpg", class: "rounded-circle mr15", size: "40x40" %>
           </a>
           <div class="dropdown-menu dropdown-menu-right">
-            <div class='dropdown-item'>らんてっく たろう</div>
+            <div class='dropdown-item'><%= current_user.decorate.full_name %></div>
             <div class="dropdown-divider"></div>
             <%= link_to 'プロフィール', "#", class: "dropdown-item" %>
             <%= link_to 'ログアウト', logout_path, method: :delete, class: "dropdown-item" %>
