--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -9,8 +9,38 @@
         <div style='display: inline; float: right;'>
           <%= link_to board_path(board), id: 'btn-bookmark-33', method: :post, remote: true, rel: 'nofollow' do %>
             <i class="fa fa-star-o"></i>
-            <% end %>
-          </div>
+          <% end %>
+        </div>
+
+
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <i class="fa fa-user"></i>
+            <%= board.user.last_name + board.user.first_name %>
+          </li>
+          <li class="list-inline-item">
+            <i class="fa fa-calendar"></i>
+            <%= l board.created_at, format: :long %>
+          </li>
+        </ul>
+        <p class="card-text"><%= board.title %></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-sm-12 col-md-6 col-lg-4 mb-3">
+  <div id="product-id-33">
+    <div class="card">
+      <%= image_tag '/assets/sample-08ca6735af47bfefce4c43e3de2182768289121aa057f141b7f4704a89670827.jpg', class: 'card-img-top', size: '300x200' %>
+      <div class="card-body">
+        <h4 class="card-title">
+          <%= link_to board.title, board_path(board) %>
+        </h4>
+        <div style='display: inline; float: right;'>
+          <%= link_to board_path(board), id: 'btn-bookmark-33', method: :post, remote: true, rel: 'nofollow' do %>
+            <i class="fa fa-star-o"></i>
+          <% end %>
+        </div>
 
 
         <ul class="list-inline">
